--- a/lib.Blazor/Pages/Index.razor
+++ b/lib.Blazor/Pages/Index.razor
@@ -37,7 +37,7 @@ Welcome to your new app.
 @if (repetition == 0)
 {
     <button><a href="users">
-        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="24" fill="currentColor" class="bi bi-people-fill"
+        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="24" fill="Black" class="bi bi-people-fill"
             viewBox="0 0 16 16">
             <path d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
             <path fill-rule="evenodd"
@@ -50,5 +50,3 @@ Welcome to your new app.
 {
     <button @onclick='player.rename'> @player.thing</button>
 }
-
-<SurveyPrompt Title="How is Blazor working for you?" />
