--- a/lib.Blazor/Pages/Index.razor
+++ b/lib.Blazor/Pages/Index.razor
@@ -2,32 +2,19 @@
 @using System.Collections.Generic;
 @page "/"
 @code {
-    playerData bean = new playerData();
-    playerData newBean = new playerData();
-    public int repetition = 0;
+    public string userName;
+    public string errorTime;
     List<playerData> playerBase = new List<playerData>();
-    public void newobj()
-    {
-        playerData thing = new playerData();
-        playerBase.Add(thing);
-    }
     public void doAdd()
     {
-        for (int i = 0; i < playerBase.Count; i++)
+        if (userName != null)
         {
-            for (int z = 0; z < playerBase.Count; z++)
-            {
-                if (playerBase[z] == playerBase[i])
-                {
-                    repetition = 2;
-                }
-            }
+            playerBase.Add(new playerData(userName));
+            errorTime = null;
         }
-        if (repetition == 0)
+        else
         {
-            playerBase.Add(bean);
-            playerBase.Add(newBean);
-            repetition++;
+            errorTime = "You IMBICILE! YOU FOOL!!! ENTER A REAL NAME!!!";
         }
     }
 }
@@ -35,25 +22,28 @@
 <PageTitle>Index</PageTitle>
 
 <h1>Hello, world!</h1>
-<h1>@bean.thing</h1>
-<button @onclick='bean.rename'> Yo, test this thing man</button>
+<input type='text' @bind='userName'>
+<p>@errorTime</p><br />
 <button @onclick='doAdd'> Yo, let's make some new buttons</button>
-<button @onclick='newobj'>Please let this work</button>
 Welcome to your new app.
 <h1></h1>
-@if (repetition == 0)
+@foreach (playerData user in playerBase)
 {
+    <h1>@user.userName</h1>
+}
+@* @if (repetition == 0)
+    {
     <button><a href="users">
-        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="24" fill="Black" class="bi bi-people-fill"
-            viewBox="0 0 16 16">
-            <path d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
-            <path fill-rule="evenodd"
-                d="M5.216 14A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1h4.216z" />
-            <path d="M4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z" />
-        </svg>
+    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="24" fill="Black" class="bi bi-people-fill"
+    viewBox="0 0 16 16">
+    <path d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
+    <path fill-rule="evenodd"
+    d="M5.216 14A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1h4.216z" />
+    <path d="M4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z" />
+    </svg>
     </a></button>
-}
-@foreach (playerData player in playerBase)
-{
+    } *@
+@* @foreach (playerData player in playerBase)
+    {
     <button @onclick='player.rename'> @player.thing</button>
-}
+    } *@
