showing games is tough

--- a/lib.Blazor/Pages/Index.razor
+++ b/lib.Blazor/Pages/Index.razor
@@ -20,7 +20,7 @@
         }
         else
         {
-            players.errorTime = "Oi! Don't give me any of that null bull****";
+            players.errorTime = "Oi! Don't give me a null value! That's mean";
         }
     }
     public void story()
