Use a new reference after adding a game

--- a/lib.Blazor/Pages/Users.razor
+++ b/lib.Blazor/Pages/Users.razor
@@ -93,6 +93,7 @@
                if (user.playerCode == playerSelection)
                { 
                     user.WholeGame(thing);
+                    thing = "";
                }
           } 
      }
