--- a/lib.Blazor/Shared/NavMenu.razor
+++ b/lib.Blazor/Shared/NavMenu.razor
@@ -1,6 +1,7 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@using lib;
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">lib.Blazor</a>
+        <a class="navbar-brand" href="">Awesome Chess Thing</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -25,7 +26,6 @@
         </div>
     </nav>
 </div>
-
 @code {
     private bool collapseNavMenu = true;
 
