--- a/lib.Blazor/Pages/Users.razor
+++ b/lib.Blazor/Pages/Users.razor
@@ -4,26 +4,33 @@
 
 @code
 {
-        protected override void OnInitialized()
-        {
-            if(players.playerBase.Count <= 1)
-            {
-                 UserPageNavigation.singleUser = true;
-                 UserPageNavigation.playerSelection = 0;
-            }
-        }
+     protected override void OnInitialized()
+     {
+          if (players.playerBase.Count <= 1)
+          {
+               UserPageNavigation.singleUser = true;
+               UserPageNavigation.playerSelection = 0;
+               UserPageNavigation.options = true;
+          }
+          if (players.playerBase.Count > 1)
+          {
+               UserPageNavigation.singleUser = false;
+               UserPageNavigation.options = false;
+          }
+     }
 }
 @if (!UserPageNavigation.singleUser)
 {
      <h1>Users</h1>
      foreach (playerData user in players.playerBase)
      {
-          <p>@user.playerCode @user.userName </p>
+          <p>@user.playerCode) @user.userName </p>
      }
      <p></p>
      <input type='text' @bind='UserPageNavigation.thing'>
      <p>@UserPageNavigation.error</p>
-     <button @onclick='UserPageNavigation.select'>Select the user you would like to view</button>
+     <p>Enter the user number to select the user</p>
+     <button @onclick='UserPageNavigation.select'>Select user</button>
 }
 @if (UserPageNavigation.singleUser)
 {
@@ -85,7 +92,4 @@
 @if (UserPageNavigation.gameadd)
 {
      <button @onclick='UserPageNavigation.noNewGame'>Save new playerdata</button>
-}#pragma warning restore 1998
-#nullable restore
-#line 6 "/home/beast/code/final-Project/lib.Blazor/Pages/Users.razor"
-
+}
